pushes to github

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = mongodb+srv://admin:Baja123@cluster2.fe8xn.mongodb.net/project3-backend?retryWrites=true&w=majority
+SECRET = usneyvntlajry
